--- a/css/main.css
+++ b/css/main.css
@@ -29,20 +29,33 @@
 	margin-left: 5px;
 }
 
-/* .bdr{
-	border: 1px solid red;
-	border-radius: 3px;
-} */
-
-.minh-150{
+.minh-150 {
 	min-height: 150px;
 }
 
-.bg-form {
-	background-color: rgb(255, 236, 149);
+.bdr {
+	border: 1px solid red;
+	border-radius: 3px;
+}
+
+.bdy {
+	border: 1px solid rgb(255, 217, 0);
+	border-radius: 5px;
 }
 
 
-.red{
-	background-color: #000;
+.bg-form {
+	background-color: rgb(255, 238, 163);
+}
+
+.bg-field {
+	background-color: rgb(255, 252, 241);
+}
+
+.bg-label {
+	background-color: rgb(255, 217, 0);
+}
+
+.bg-btn {
+	background-color: rgb(0, 179, 255);
 }
