--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@
 .tip {
 	width: 100%;
 	font-size: 14px;
-	color: red;
+	color: rgb(255, 94, 0);
 	margin-left: 5px;
 }
 
@@ -38,8 +38,8 @@
 } */
 
 .bdr {
-	border: 1px solid red;
-	border-radius: 3px;
+	border: 1px solid rgb(255, 94, 0) !important;
+	border-radius: 3px !important;
 }
 
 .bdy {
